--- a/libexec/Makefile
+++ b/libexec/Makefile
@@ -1,8 +1,12 @@
-#	@(#)Makefile	5.8 (Berkeley) 07/20/92
+#	@(#)Makefile	5.8 (Berkeley) 07/23/92
 
 SUBDIR=	bugfiler comsat fingerd ftpd getNAME getty mail.local \
 	makekey rexecd rlogind rshd talkd telnetd tftpd uucpd
 
 #KERBEROS=kpasswdd 
+
+.if	${MACHINE} == "hp300"
+SUBDIR+=rbootd
+.endif
 
 .include <bsd.subdir.mk>
