--- a/games/Makefile
+++ b/games/Makefile
@@ -1,9 +1,9 @@
-#	@(#)Makefile	5.17 (Berkeley) 08/18/92
+#	@(#)Makefile	5.18 (Berkeley) 08/29/92
 
 Missing: adventure boggle ching dungeon hunt phantasia quiz warp 
 
 	chess ching cribbage dm factor fish fortune hack hangman mille \
-	monop morse number pig pom ppt primes quiz rain robots rogue sail \
-	snake trek wargames worm worms wump
+	monop morse number phantasia pig pom ppt primes quiz rain robots \
+	rogue sail snake trek wargames worm worms wump
 
 .include <bsd.subdir.mk>
