--- a/libexec/Makefile
+++ b/libexec/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.9 (Berkeley) 08/06/92
+#	@(#)Makefile	5.10 (Berkeley) 09/02/92
 
 SUBDIR=	bugfiler comsat fingerd ftpd getNAME getty kpasswdd lfs_cleanerd \
 	mail.local makekey rexecd rlogind rshd talkd telnetd tftpd uucpd
@@ -6,6 +6,8 @@ SUBDIR=	bugfiler comsat fingerd ftpd getNAME getty kpasswdd lfs_cleanerd \
 #KERBEROS=kpasswdd 
 
 .if	${MACHINE} == "hp300"
+SUBDIR+=rbootd
+.elif	${MACHINE} == "luna68k"
 SUBDIR+=rbootd
 .endif
 
